# xonplaces

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_debian  README.md  buildspec.yml  cl_parse.c  cl_screen.c  cmd.c  common.c  common.h  cvar.c  docker_build.sh  docker_build_debian.sh  gl_rmain.c  menu.c  netconn.c  netconn.h  sbar.c  svvm_cmds.c  tracing.d  view.c
cmake/: D0BlindId.cmake  FindSDL2.cmake  coverage.cmake  dtrace.cmake  sanitizers.cmake
scripts/: dheadgen.pl
src/: bih.c  bih.h  bspfile.h  cap_avi.c  cap_ogg.c  cd_bsd.c  cd_linux.c  cd_null.c  cd_sdl.c  cd_shared.c  cd_win.c  cdaudio.h  cl_collision.c  cl_collision.h  cl_demo.c  cl_dyntexture.c  cl_dyntexture.h  cl_input.c  cl_main.c  cl_parse.c  cl_particles.c  cl_screen.c  cl_video.c  cl_video.h  cl_video_jamdecode.c  cl_video_libavw.c  client.h  clprogdefs.h  clvm_cmds.c  cmd.c  cmd.h  collision.c  collision.h  common.c  common.h  conproc.c  conproc.h  console.c  console.h  crypto.c  (+160 more)
src/dpdefs/: dpextensions.qc
src/libbalance/: CMakeLists.txt  balance.cpp  balance.h  testbalance.cpp
src/libbalance/fuzzers/: CMakeLists.txt  balance_dict.txt  teambalance_fuzzer.cpp
src/libbalance/fuzzers/corpus/: 1.raw  10.raw  11.raw  12.raw  13.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw  8.raw  9.raw
src/utils/: crypto-keygen-standalone.c
